Polishing (#7)
* ~ workflow fixed

* ~ market swag

* ~ readme and fixes

* ~ main swag
